OpenJDK 12 support